<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="itesm.mx.a01196362_examen_ahorroenergia.FragAgregarEvento">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/text_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:text="@string/agregar_evento_nombre" />

    <Spinner
        android:id="@+id/spinner_electrodomesticos"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:textAlignment="center"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/text_watts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorBlack"
        android:text="@string/agregar_evento_watts_hora" />

    <Button
        android:id="@+id/btn_agregar_imagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="25dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="Agregar imagen" />

    <ImageView
        android:id="@+id/image_electrodomestico"
        android:layout_width="236dp"
        android:layout_height="180dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/text_hora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="20dp"
        android:text="@string/agregar_evento_hora" />

    <EditText
        android:id="@+id/edit_consumo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        android:hint="@string/agregar_evento_hint_consumo"
        android:inputType="numberDecimal" />


    <Button
        android:id="@+id/btn_agregar"
        android:layout_width="match_parent"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:text="@string/agregar_evento_agregar" />

</LinearLayout>

</FrameLayout>
